# 05ESP32p4webcamH264face

./: .envrc  .gitignore  architecture_description.md  partitions.csv  sdkconfig.defaults
components/sensor_init/: example_sensor_init.c
main/: CMakeLists.txt  Kconfig.projbuild  camera_controller.c  camera_controller.h  example_config.h  face_detect_task.cpp  face_detect_task.h  idf_component.yml  image_processor.c  image_processor.h  main.c  mjpeg_server.c  mjpeg_server.h  wifi_manager.c  wifi_manager.h
